Fixed header z-index

--- a/assets/sass/objects/header.scss
+++ b/assets/sass/objects/header.scss
@@ -16,7 +16,7 @@
         position: fixed;
         right: $frame-size--small;
         top: 0;
-        z-index: 30;
+        z-index: 51;
 
         .o-site-logo {
             display: block;
@@ -53,7 +53,7 @@
         position: fixed;
         right: $frame-size--small;
         top: 0;
-        z-index: 30;
+        z-index: 51;
 
         .o-site-logo {
             display: block;
